--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,9 @@
   <body>
     <nav>
       <div class="nav-wrapper white">
-        <a href="#" class="brand-logo grey-text">
-          Histgram
-        </a>
+        <a href="#" class="brand-logo black-text">Histgram</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><i class="material-icons left">assignment</i></li>
+          <li><i class="material-icons left">search</i></li>
           <li><i class="material-icons left">assignment</i></li>
           <li><i class="material-icons left">assignment</i></li>
         </ul>
@@ -40,4 +38,11 @@
 
     <%= yield %>
   </body>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      var elems = document.querySelectorAll('.sidenav');
+      var instances = M.Sidenav.init(elems, options);
+    });
+  </script>
 </html>
