:dizzy: Fixed #5. Updated icon balance in header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,15 @@
       <div class="nav-wrapper" style="background:#294C7A;">
         <a href="#" class="brand-logo white-text">Histgram</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down white-text">
-          <li><i class="material-icons left">search</i></li>
-          <li><i class="material-icons left">assignment</i></li>
-          <li><i class="material-icons left">assignment</i></li>
+          <!-- <li><a href="#"><i class="material-icons left">search</i></a></li> -->
+          <li><a href="#"><i class="material-icons left">account_circle</i></a></li>
+          <li>
+            <a href="#"><i class="material-icons left">info</i></a>
+          </li>
         </ul>
+        <a href="#" data-target="slide-out" class="">
+          <i class="material-icons right" style="margin-right:28px;">search</i>
+        <a>
         <a href="#" data-target="slide-out" class="sidenav-trigger white-text">
           <i class="material-icons">menu</i>
         </a>
@@ -32,10 +37,10 @@
     <!-- sidenav -->
     <ul id="slide-out" class="sidenav">
       <li>
-        <a href="#"><i class="material-icons left">assignment</i>メモ一覧</a>
+        <a href="#"><i class="material-icons left">account_circle</i>マイページ</a>
       </li>
-      <li href="#">
-        <a><i class="material-icons left">assignment</i>メモ一覧</a>
+      <li>
+        <a href="#"><i class="material-icons left">info_outline</i>ヘルプ</a>
       </li>
     </ul>
 
