Added test image

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,54 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<!-- posts -->
+<div class="container" style="margin-top: 20px;">
+  <div class="row">
+    <div class="col s4 m4 l4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <%= image_tag('test1.png', :class => "activator") %>
+        </div>
+      </div>
+    </div>
+    <div class="col s4 m4 l4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <%= image_tag('test2.png', :class => "activator") %>
+        </div>
+      </div>
+    </div>
+    <div class="col s4 m4 l4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <%= image_tag('test3.png', :class => "activator") %>
+        </div>
+      </div>
+    </div>
+    <div class="col s4 m4 l4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <%= image_tag('test2.png', :class => "activator") %>
+        </div>
+      </div>
+    </div>
+    <div class="col s4 m4 l4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <%= image_tag('test3.png', :class => "activator") %>
+        </div>
+      </div>
+    </div>
+    <div class="col s4 m4 l4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <%= image_tag('test1.png', :class => "activator") %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<style>
+.card-image img {
+  width: 293px;
+  height: 293px;
+}
+</style>
