--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <body>
     <nav class="nav-extended">
       <div class="nav-wrapper" style="background:#294C7A;">
-        <a href="#" class="brand-logo white-text">Histgram</a>
+        <a href="#" class="brand-logo white-text left" >Histgram</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down white-text">
           <!-- <li><a href="#"><i class="material-icons left">search</i></a></li> -->
           <li><a href="#"><i class="material-icons left">account_circle</i></a></li>
@@ -39,12 +39,8 @@
 
     <!-- sidenav -->
     <ul id="slide-out" class="sidenav">
-      <li>
-        <a href="#"><i class="material-icons left">account_circle</i>マイページ</a>
-      </li>
-      <li>
-        <a href="#"><i class="material-icons left">info_outline</i>ヘルプ</a>
-      </li>
+      <li><a href="#"><i class="material-icons left">account_circle</i>マイページ</a></li>
+      <li><a href="#"><i class="material-icons left">info_outline</i>ヘルプ</a></li>
     </ul>
 
     <%= yield %>
@@ -56,6 +52,7 @@
       });
     </script>
 
+    <!-- FIXME -->
     <style>
     .brand-logo {
       font-family: 'Abril Fatface', cursive;
