Updated design, added new post form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
 
     <%= yield %>
 
+    <!-- [TODO]for new post -->
     <div class="fixed-action-btn">
       <a class="btn-floating btn-large red">
         <i class="large material-icons">add</i>
@@ -63,6 +64,7 @@
     .brand-logo {
       font-family: 'Abril Fatface', cursive;
       letter-spacing: 1.6px;
+      margin-left: 20px;
     }
     </style>
   </body>
