--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,48 +1,15 @@
 <!-- posts -->
 <div class="container" style="margin-top: 20px;">
   <div class="row">
-    <div class="col s4 m4 l4">
-      <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-          <%= image_tag('test1.png', :class => "activator") %>
+    <% @post.each do |post| %>
+      <div class="col s4 m4 l4">
+        <div class="card" style="min-height:250px;">
+          <div class="card-content black-text">
+            <%= post.content %>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col s4 m4 l4">
-      <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-          <%= image_tag('test2.png', :class => "activator") %>
-        </div>
-      </div>
-    </div>
-    <div class="col s4 m4 l4">
-      <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-          <%= image_tag('test3.png', :class => "activator") %>
-        </div>
-      </div>
-    </div>
-    <div class="col s4 m4 l4">
-      <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-          <%= image_tag('test2.png', :class => "activator") %>
-        </div>
-      </div>
-    </div>
-    <div class="col s4 m4 l4">
-      <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-          <%= image_tag('test3.png', :class => "activator") %>
-        </div>
-      </div>
-    </div>
-    <div class="col s4 m4 l4">
-      <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-          <%= image_tag('test1.png', :class => "activator") %>
-        </div>
-      </div>
-    </div>
+    <% end %>
   </div>
 </div>
 
