--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <body>
     <nav class="nav-extended">
       <div class="nav-wrapper" style="background:#294C7A;">
-        <a href="#" class="brand-logo white-text left" >Histgram</a>
+        <a href="#" class="brand-logo white-text">Histgram</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down white-text">
           <!-- <li><a href="#"><i class="material-icons left">search</i></a></li> -->
           <li><a href="#"><i class="material-icons left">account_circle</i></a></li>
