--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="col s12 m12 l12">
-      <%= form_tag("/posts/create") do %>
+      <%= form_for @post, :url => {:action => 'create'} do |f| %>
+        <%= f.text_field :content %>
+        <%= f.file_field :image %>
+      <% end %>
+
+      <!-- <%= form_tag("/posts/create") do %>
         <div class="form">
           <input name="content" type="text" placeholder="内容" value="<%= @post.content %>">
           <input type="submit" value="投稿">
         </div>
-      <% end %>
+      <% end %> -->
     </div>
   </div>
 </div>
