--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
       <div class="col s4 m4 l4">
         <div class="card" style="min-height:250px;">
           <div class="card-content black-text">
-            <%= post.content %>
+            <%= link_to(simple_format(post.content), "posts/#{post.id}") %>
           </div>
         </div>
       </div>
