--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,6 +4,7 @@
       <%= form_for @post, :url => {:action => 'create'} do |f| %>
         <%= f.text_field :content %>
         <%= f.file_field :image %>
+        <input type="submit" value="投稿">
       <% end %>
 
       <!-- <%= form_tag("/posts/create") do %>
