--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,10 @@
       <div class="col s4 m4 l4">
         <div class="card" style="min-height:250px;">
           <div class="card-content black-text">
-            <%= link_to(simple_format(post.content), "posts/#{post.id}") %>
+            <!-- <%= link_to(simple_format(post.content), "posts/#{post.id}") %> -->
+            <%= link_to posts_path(post.id) do %>
+              <%= post.image %>
+            <% end %>
           </div>
         </div>
       </div>
