[WIP] Updated main page #15

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,8 @@
   <body>
     <nav class="nav-extended">
       <div class="nav-wrapper" style="background:#294C7A;">
-        <a href="#" class="brand-logo white-text">Histgram</a>
+        <%= link_to "Histgram", "/", {:class => "brand-logo white-text"} %>
+        <!-- <a href="#" class="brand-logo white-text">Histgram</a> -->
         <ul id="nav-mobile" class="right hide-on-med-and-down white-text">
           <!-- <li><a href="#"><i class="material-icons left">search</i></a></li> -->
           <li><a href="#"><i class="material-icons left">account_circle</i></a></li>
@@ -31,7 +32,7 @@
         <a href="#" data-target="slide-out" class="">
           <i class="material-icons right" style="margin-right:28px;">search</i>
         <a>
-        <a href="#" data-target="slide-out" class="sidenav-trigger white-text">
+        <a href="!#" data-target="slide-out" class="sidenav-trigger white-text">
           <i class="material-icons">menu</i>
         </a>
       </div>
