--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
           <div class="card" style="min-height:250px;">
             <div class="card-image">
               <!-- <%= link_to(simple_format(post.content), "posts/#{post.id}") %> -->
-              <%= post.image %>
+              <%= image_tag post.image.to_s, :alt => "image" %>
             </div>
           </div>
         <% end %>
