Added about page and link to this page in header. Fixed #17

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     <!-- sidenav -->
     <ul id="slide-out" class="sidenav">
       <li><a href="#"><i class="material-icons left">account_circle</i>マイページ</a></li>
-      <li><a href="#"><i class="material-icons left">info_outline</i>ヘルプ</a></li>
+      <li><a href="#"><i class="material-icons left">info</i>ヘルプ</a></li>
     </ul>
 
     <%= yield %>
