--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.card-title::first-letter {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #294C7A;
+}
+.card-content p {
+  margin-bottom: 10px !important;
+}
