--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="card">
+      <%= link_to "Back", :back %>
       <div class="card-image">
         <%= image_tag @post.image.to_s %>
       </div>
