--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,9 @@
   </head>
 
   <body>
-    <nav class="nav-extended">
+    <nav>
       <div class="nav-wrapper" style="background:#294C7A;">
         <%= link_to "Histgram", "/", {:class => "brand-logo white-text"} %>
-        <!-- <a href="#" class="brand-logo white-text">Histgram</a> -->
         <ul id="nav-mobile" class="right hide-on-med-and-down white-text">
           <!-- <li><a href="#"><i class="material-icons left">search</i></a></li> -->
           <li><a href="#"><i class="material-icons left">account_circle</i></a></li>
@@ -60,7 +59,7 @@
       });
     </script>
 
-    <!-- FIXME -->
+    <!-- FIXME: responsive -->
     <style>
     .brand-logo {
       font-family: 'Abril Fatface', cursive;
