--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -8,22 +8,22 @@
         </div>
         <div class="card-content black-text">
           <span class="card-title">What is Histgram?</span>
-          <p>Image submission type SNS for posting life event.</p>
+          <p>- Image submission type SNS for posting life event.</p>
 
           <span class="card-title">When to use Histgram?</span>
-          <p>When you meet a memorable event.</p>
+          <p>- When you meet a memorable event.</p>
 
           <span class="card-title">Who use Histgram?</span>
-          <p>Just you.</p>
+          <p>- Just you.</p>
 
           <span class="card-title">Why use Histgram?</span>
-          <p>To leave your memories.</p>
+          <p>- To leave your memories.</p>
 
           <span class="card-title">Where use Histgram?</span>
-          <p>Anywhere any fun place.</p>
-          
+          <p>- Anywhere any fun place.</p>
+
           <span class="card-title">How use Histgram?</span>
-          <p>As the soul goes.</p>
+          <p>- As the soul goes.</p>
         </div>
       </div>
     </div>
