--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,9 +2,9 @@
 <div class="container" style="margin-top: 20px;">
   <div class="row">
     <% @post.each do |post| %>
-      <div class="col s4 m4 l4">
+      <div class="col s6 m4 l3">
         <%= link_to posts_path(post.id) do %>
-          <div class="card" style="min-height:250px;">
+          <div class="card" style="min-height:250px; border-radius:6px;">
             <div class="card-image">
               <!-- <%= link_to(simple_format(post.content), "posts/#{post.id}") %> -->
               <%= image_tag post.image.to_s, :alt => "image" %>
@@ -17,8 +17,4 @@
 </div>
 
 <style>
-.card-image img {
-  width: 293px;
-  height: 293px;
-}
 </style>
