Adjusted margin and padding

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.row .col {
+  padding: 0.3rem;
+}
+.row .col.s6 {
+  height: 224px;
+}
+.container {
+  width: 95% !important;
+}
