Adjusted margin and padding

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <!-- posts -->
-<div class="container" style="margin-top: 20px;">
+<div class="container">
   <div class="row">
     <% @post.each do |post| %>
       <div class="col s6 m4 l3">
