--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,7 @@
             <div class="card-image">
               <!-- <%= link_to(simple_format(post.content), "posts/#{post.id}") %> -->
               <%= image_tag post.image.to_s, :alt => "image" %>
+              <i class="material-icons small black-text">favorite_border</i>
             </div>
           </div>
         <% end %>
@@ -17,4 +18,9 @@
 </div>
 
 <style>
+.card-image .material-icons {
+  position: absolute;
+  bottom: 4px;
+  right: 4px;
+}
 </style>
