Update favorite icon for card-image

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
             <div class="card-image">
               <!-- <%= link_to(simple_format(post.content), "posts/#{post.id}") %> -->
               <%= image_tag post.image.to_s, :alt => "image" %>
-              <i class="material-icons small black-text">favorite_border</i>
+              <i class="material-icons small white-text">favorite_border</i>
             </div>
           </div>
         <% end %>
