--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,33 @@
 <!-- posts -->
-<div class="container">
-  <div class="row">
+<div class="content" style="margin-top:1.5rem;">
+  <div class="gallery">
+    
+    <% @post.each do |post| %>
+      <%= link_to posts_path(post.id) do %>
+        <div class="gallery__item" tabindex="0">
+          <%= image_tag post.image.to_s, :alt => "image" %>
+          <div class="gallery__item__info">
+            <ul>
+              <li class="gallery__item__likes">
+                <span class="visually-hidden">Likes:</span>
+                <i class="fas fa-heart" aria-hidden="true"></i> 56
+              </li>
+              <li class="gallery-item-comments">
+                <span class="visually-hidden">Comments:</span>
+                <i class="fas fa-comment" aria-hidden="true"></i> 2
+              </li>
+            </ul>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+
+    <!--
     <% @post.each do |post| %>
       <div class="col s6 m4 l3">
         <%= link_to posts_path(post.id) do %>
           <div class="card" style="border-radius:6px;">
             <div class="card-image">
-              <!-- <%= link_to(simple_format(post.content), "posts/#{post.id}") %> -->
               <%= image_tag post.image.to_s, :alt => "image" %>
               <i class="material-icons small white-text">favorite_border</i>
             </div>
@@ -14,13 +35,10 @@
         <% end %>
       </div>
     <% end %>
+    -->
+
   </div>
 </div>
 
 <style>
-.card-image .material-icons {
-  position: absolute;
-  bottom: 4px;
-  right: 4px;
-}
 </style>
