Added gallery__header for post count

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -35,6 +35,22 @@ img {
   margin: -1rem -1rem;
   padding-bottom: 3rem;
 }
+.gallery__header {
+  font-size: 2rem; 
+  color: gray; 
+  font-weight: bold; 
+  display: table; 
+  width: 100%;
+}
+.gallery__header p {
+  display: table-cell;
+}
+.gallery__header p:nth-child(1) {
+  text-align: left;
+}
+.gallery__header p:nth-child(2) {
+  text-align: right;
+}
 .gallery__item {
   position: relative;
   flex: 1 0 22rem;
@@ -75,6 +91,7 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 1.1rem;
 }
 
 /* Media Query */
