Fixed #18. Updated header margin in smartphone size

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,11 @@
     .brand-logo {
       font-family: 'Abril Fatface', cursive;
       letter-spacing: 1.6px;
-      margin-left: 20px;
+    }
+    @media only screen and (min-width: 993px) {
+      .brand-logo {
+        margin-left: 20px;
+      }
     }
     </style>
   </body>
