--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+<!-- show -->
+<div class="container" style="margin-top: 1.5rem;">
   <div class="row">
     <div class="card">
       <div class="card-image">
@@ -8,7 +9,8 @@
         <p><%= simple_format(@post.content) %></p>
       </div>
       <div class="card-action">
-        <%= link_to "Back", :back %>
+        <%= link_to "戻る", :back %>
+        <%= link_to("削除", "/posts/#{@post.id}/destroy", { method: "post" })%>
       </div>
     </div>
   </div>
