Added like button, deleted comments

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,6 +11,7 @@
       <div class="card-action">
         <%= link_to "戻る", :back %>
         <%= link_to("削除", "/posts/#{@post.id}/destroy", { method: "post" })%>
+        <i class="far fa-heart fa-2x" aria-hidden="true"></i> 56
       </div>
     </div>
   </div>
