--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
 
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   </head>
 
   <body>
@@ -61,9 +63,10 @@
 
     <!-- FIXME: responsive -->
     <style>
-    .brand-logo {
+    nav .brand-logo {
       font-family: 'Abril Fatface', cursive;
       letter-spacing: 1.6px;
+      font-size: 2.5rem;
     }
     @media only screen and (min-width: 993px) {
       .brand-logo {
