--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,11 @@
 <!-- posts -->
 <div class="content" style="margin-top:1.5rem;">
+
   <div class="gallery__header">
     <p>New History</p>
-    <p><%= @post.count %> posts</p>
+    <p><span style="color: #000;"><%= @post.count %></span> posts</p>
   </div>
+  
   <div class="gallery">
     <% @post.each do |post| %>
       <%= link_to posts_path(post.id), { :class => "gallery__item" } do %>
@@ -22,23 +24,8 @@
         </div>
       <% end %>
     <% end %>
-
-    <!--
-    <% @post.each do |post| %>
-      <div class="col s6 m4 l3">
-        <%= link_to posts_path(post.id) do %>
-          <div class="card" style="border-radius:6px;">
-            <div class="card-image">
-              <%= image_tag post.image.to_s, :alt => "image" %>
-              <i class="material-icons small white-text">favorite_border</i>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
-    -->
-
   </div>
+  
 </div>
 
 <style>
