--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,25 @@
 <!-- show -->
 <div class="container" style="margin-top: 1.5rem;">
-  <div class="row">
-    <div class="card">
-      <div class="card-image">
-        <%= image_tag @post.image.to_s %>
-      </div>
-      <div class="card-content">
-        <p><%= simple_format(@post.content) %></p>
-      </div>
-      <div class="card-action">
-        <%= link_to "戻る", :back %>
-        <%= link_to("削除", "/posts/#{@post.id}/destroy", { method: "post" })%>
-        <i class="far fa-heart fa-2x" aria-hidden="true"></i> 56
+  <div class="section">
+    <div class="row">
+      <div class="col l12">
+        <div class="row">
+          <div class="col s12 l8">
+                <div class="card">
+                  <div class="card-image">
+                    <%= image_tag @post.image.to_s %>
+                  </div>
+                  <div class="card-content">
+                    <p><%= simple_format(@post.content) %></p>
+                  </div>
+                  <div class="card-action">
+                    <%= link_to "戻る", :back %>
+                    <%= link_to("削除", "/posts/#{@post.id}/destroy", { method: "post" })%>
+                    <i class="far fa-heart fa-2x" aria-hidden="true"></i> 56
+                  </div>
+                </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
