Fixed #26. Added site logo in sidenav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         <a href="#" data-target="slide-out" class="">
           <i class="material-icons right" style="margin-right:28px;">search</i>
         <a>
-        <a href="!#" data-target="slide-out" class="sidenav-trigger white-text">
+        <a href="#" data-target="slide-out" class="sidenav-trigger white-text">
           <i class="material-icons">menu</i>
         </a>
       </div>
@@ -42,6 +42,15 @@
 
     <!-- sidenav -->
     <ul id="slide-out" class="sidenav">
+      <li>
+        <div class="user-view">
+          <div class="background">
+            <%= image_tag "about.jpg", :width => "300", :height => "160" %>
+          </div>
+          <p class="white-text">Histgram</p>
+          <p class="white-text">Life is beautiful.</p>
+        </div>
+      </li>
       <li><a href="#"><i class="material-icons left">account_circle</i>マイページ</a></li>
       <li><a href="#"><i class="material-icons left">info</i>ヘルプ</a></li>
     </ul>
