--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,12 @@
         <%= link_to "Histgram", "/", {:class => "brand-logo white-text"} %>
         <ul id="nav-mobile" class="right hide-on-med-and-down white-text">
           <!-- <li><a href="#"><i class="material-icons left">search</i></a></li> -->
-          <li><a href="#"><i class="material-icons left">account_circle</i></a></li>
           <li>
             <a href="#"><i class="material-icons left">info</i></a>
           </li>
         </ul>
         <a href="#" data-target="slide-out" class="">
-          <i class="material-icons right" style="margin-right:28px;">search</i>
+          <i class="material-icons right" style="margin-right:28px;">account_circle</i>
         <a>
         <a href="#" data-target="slide-out" class="sidenav-trigger white-text">
           <i class="material-icons">menu</i>
