--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,12 @@
   <div class="row">
     <h4>新規ユーザー登録</h4>
     <div>
+      <% @user.errors.full_messages.each do |message| %>
+        <div>
+          <%= message %>
+        </div>
+      <% end %>
+
       <%= form_tag("/users/create") do %>
         <p>ユーザー名</p>
         <input name="name">
