--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,5 +2,6 @@
   <div class="row">
     <h2><%= @user.name %></h2>
     <p><%= @user.email %></p>
+    <%= link_to("編集", "/users/#{@user.id}/edit") %>
   </div>
 </div>
