Added login_form for user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,8 @@
       </li>
       <li><a href="#"><i class="material-icons left">account_circle</i>マイページ</a></li>
       <li><a href="#"><i class="material-icons left">info</i>ヘルプ</a></li>
+      <li><%= link_to("新規登録", "/signup") %></li>
+      <li><%= link_to("ログイン", "/login") %></li>
     </ul>
 
     <%= yield %>
