--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -2,16 +2,24 @@
 <div class="container" id="login-form">
   <div class="row">
     <div class="col s12 m12 l12">
-      <h1>LOG IN</h1>
-      <div class="tbox">
-        <input type="text" name="" value="" placeholder="username">
-      </div>
-      <div class="tbox">
-        <input type="text" name="" value="" placeholder="password">
-      </div>
-      <p><input type="submit" class="btn" value="LOG IN"></p>
-      <a href="#" class="b1">FORGOT PASSWORD ?</a>
-      <a href="#" class="b2">CREATE AN ACCOUNT</a>
+      <% if @error_message %>
+        <div class="form__error">
+          <%= @error_message %>
+        </div>
+      <% end %>
+
+      <%= form_tag("/login") do %>
+        <h1>LOG IN</h1>
+        <div class="tbox">
+          <input type="text" name="email" value="<%= @email %>" placeholder="email">
+        </div>
+        <div class="tbox">
+          <input type="password" name="password" value="<%= @password %>" placeholder="password">
+        </div>
+        <p><input type="submit" class="btn" value="LOG IN"></p>
+        <a href="#" class="b1">FORGOT PASSWORD ?</a>
+        <a href="#" class="b2">CREATE AN ACCOUNT</a>
+      <% end %>
     </div>
   </div>
 </div>
