--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,9 +10,11 @@
 
       <%= form_tag("/users/create") do %>
         <p>ユーザー名</p>
-        <input name="name">
+        <input type="text" name="name" value="<%= @user.name %>">
         <p>メールアドレス</p>
-        <input name="email">
+        <input type="text" name="email" value="<%= @user.email %>">
+        <p>パスワード</p>
+        <input type="password" name="password" value="<%= @user.password %>">
         <input type="submit" value="新規登録">
       <% end %>
     </div>
