--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
   </head>
 
   <body>
@@ -40,9 +41,15 @@
     </nav>
 
     <% if flash[:notice] %>
-      <div class="card green lighten-5">
-        <div class="card-content green-text">
-          <%= flash[:notice] %>
+      <div class="container" style="position:absolute;">
+        <div class="row">
+          <div class="col s12 m12 l12">
+            <div class="card green lighten-5">
+              <div class="card-content green-text" style="font-size:1.2rem;">
+                <%= flash[:notice] %>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     <% end %>
@@ -54,14 +61,41 @@
           <div class="background">
             <%= image_tag "about.jpg", :width => "300", :height => "160" %>
           </div>
-          <p class="white-text">Histgram</p>
-          <p class="white-text">Life is beautiful.</p>
+          <p>Histgram</p>
+          <p>Life is beautiful.</p>
         </div>
       </li>
+
+      <% if @current_user %>
+        <li style="font-size:1.8rem; margin-left:2rem;"><%= @current_user.name %></li>
+      <% end %>
+
+      <li>
+        <%= link_to root_path do %>
+          <i class="material-icons left">home</i>ホーム
+        <% end %>
+      </li>
       <li><a href="#"><i class="material-icons left">account_circle</i>マイページ</a></li>
-      <li><a href="#"><i class="material-icons left">info</i>ヘルプ</a></li>
-      <li><%= link_to("新規登録", "/signup") %></li>
-      <li><%= link_to("ログイン", "/login") %></li>
+      <li>
+        <%= link_to about_path do %>
+          <i class="material-icons left">info</i>このサイトについて
+        <% end %>
+      </li>
+      <li>
+        <%= link_to signup_path do %>
+          <i class="material-icons left">person_add</i>新規登録
+        <% end %>
+      </li>
+      <li>
+        <%= link_to login_path do %>
+          <i class="material-icons left">get_app</i>ログイン
+        <% end %>
+      </li>
+      <li>
+        <%= link_to logout_path, :method => :post do %>
+          <i class="material-icons left">exit_to_app</i>ログアウト
+        <% end %>
+      </li>
     </ul>
 
     <%= yield %>
@@ -77,6 +111,8 @@
         var elems = document.querySelectorAll('.sidenav');
         var instances = M.Sidenav.init(elems, {});
       });
+
+      $('.dropify').dropify();
     </script>
 
     <!-- FIXME: responsive -->
@@ -90,6 +126,11 @@
       .brand-logo {
         margin-left: 20px;
       }
+    }
+    .user-view p {
+      font-size: 2rem;
+      font-weight: bold;
+      color: azure;
     }
     </style>
   </body>
