--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,8 @@
   <div class="row">
     <h2><%= @user.name %></h2>
     <p><%= @user.email %></p>
-    <%= link_to("編集", "/users/#{@user.id}/edit") %>
+    <% if @user.id == @current_user.id %>
+      <%= link_to("編集", "/users/#{@user.id}/edit") %>
+    <% end %>
   </div>
 </div>
