--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top:1.5rem;">
   <div class="row">
     <div class="col s12 m12 l12">
       <%= form_for @post, :url => {:action => 'create'} do |f| %>
