--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,308 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+img {
+  display: block;
+}
+.content {
+  margin-top: 2rem;
+  max-width: 93.5rem;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+.btn {
+  display: inline-block;
+  font: inherit;
+  background: none;
+  border: none;
+  color: inherit;
+  padding: 0;
+  cursor: pointer;
+}
+.btn:focus {
+  outline: 0.5rem auto #4d90fe;
+}
+.visually-hidden {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
+/* profile */
+.profile {
+  padding: 5rem 0;
+}
+
+.profile::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.profile__image img {
+  border-radius: 50%;
+}
+.profile__user__settings,
+.profile__stats,
+.profile__bio {
+  float: left;
+  width: calc(66.666% - 2rem);
+}
+.profile__user__settings {
+  margin-top: 1.1rem;
+}
+.profile__user__name {
+  display: inline-block;
+  font-size: 3.2rem;
+  font-weight: 300;
+}
+.profile__edit__btn {
+    font-size: 1.4rem;
+    line-height: 1.8;
+    border: 0.1rem solid #dbdbdb;
+    border-radius: 0.3rem;
+    padding: 0 2.4rem;
+    margin-left: 2rem;
+}
+.profile__settings__btn {
+    font-size: 2rem;
+    margin-left: 1rem;
+}
+.profile__stats {
+    margin-top: 2.3rem;
+}
+.profile__stats li {
+    display: inline-block;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    margin-right: 4rem;
+    cursor: pointer;
+}
+.profile__stats li:last-of-type {
+    margin-right: 0;
+}
+.profile__bio {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-top: 2.3rem;
+}
+.profile__real__name,
+.profile__stat__count,
+.profile__edit__btn {
+    font-weight: 600;
+}
+
+/* Gallery Section */
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -1rem -1rem;
+    padding-bottom: 3rem;
+}
+
+.gallery__item {
+    position: relative;
+    flex: 1 0 22rem;
+    margin: 1rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+.gallery__item:hover .gallery__item-info,
+.gallery__item:focus .gallery__item-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.gallery__item__info {
+    display: none;
+}
+
+.gallery__item__info li {
+    display: inline-block;
+    font-size: 1.7rem;
+    font-weight: 600;
+}
+
+.gallery__item__likes {
+    margin-right: 2.2rem;
+}
+
+.gallery__item__type {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2.5rem;
+    text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
+}
+
+.gallery__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Media Query */
+
+@media screen and (max-width: 40rem) {
+    .profile {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 4rem 0;
+    }
+
+    .profile::after {
+        display: none;
+    }
+
+    .profile__image,
+    .profile__user__settings,
+    .profile__bio,
+    .profile__stats {
+        float: none;
+        width: auto;
+    }
+
+    .profile__image img {
+        width: 7.7rem;
+    }
+
+    .profile__user__settings {
+        flex-basis: calc(100% - 10.7rem);
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 1rem;
+    }
+
+    .profile__user__name {
+        font-size: 2.2rem;
+    }
+
+    .profile__edit__btn {
+        order: 1;
+        padding: 0;
+        text-align: center;
+        margin-top: 1rem;
+    }
+
+    .profile__edit__btn {
+        margin-left: 0;
+    }
+
+    .profile__bio {
+        font-size: 1.4rem;
+        margin-top: 1.5rem;
+    }
+
+    .profile__edit__btn,
+    .profile__bio,
+    .profile__stats {
+        flex-basis: 100%;
+    }
+
+    .profile__stats {
+        order: 1;
+        margin-top: 1.5rem;
+    }
+
+    .profile__stats ul {
+        display: flex;
+        text-align: center;
+        padding: 1.2rem 0;
+        border-top: 0.1rem solid #dadada;
+        border-bottom: 0.1rem solid #dadada;
+    }
+
+    .profile__stats li {
+        font-size: 1.4rem;
+        flex: 1;
+        margin: 0;
+    }
+
+    .profile__stat__count {
+        display: block;
+    }
+}
+
+/* Spinner Animation */
+
+@keyframes loader {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/*
+
+The following code will only run if your browser supports CSS grid.
+
+Remove or comment-out the code block below to see how the browser will fall-back to flexbox & floated styling. 
+
+*/
+
+@supports (display: grid) {
+    .profile {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: repeat(3, auto);
+        grid-column-gap: 3rem;
+        align-items: center;
+    }
+
+    .profile__image {
+        grid-row: 1 / -1;
+    }
+
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+        grid-gap: 2rem;
+    }
+
+    .profile__image,
+    .profile__user__settings,
+    .profile__stats,
+    .profile__bio,
+    .gallery__item,
+    .gallery {
+        width: auto;
+        margin: 0;
+    }
+
+    @media (max-width: 40rem) {
+        .profile {
+            grid-template-columns: auto 1fr;
+            grid-row-gap: 1.5rem;
+        }
+
+        .profile__image {
+            grid-row: 1 / 2;
+        }
+
+        .profile__user__settings {
+            display: grid;
+            grid-template-columns: auto 1fr;
+            grid-gap: 1rem;
+        }
+
+        .profile__edit__btn,
+        .profile__stats,
+        .profile__bio {
+            grid-column: 1 / -1;
+        }
+
+        .profile__user__settings,
+        .profile__edit__btn,
+        .profile__settings__btn,
+        .profile__bio,
+        .profile__stats {
+            margin: 0;
+        }
+    }
+}
