--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top:1.5rem;">
   <div class="row">
     <h4>新規ユーザー登録</h4>
     <div>
@@ -8,13 +8,18 @@
         </div>
       <% end %>
 
-      <%= form_tag("/users/create") do %>
+      <%= form_for @user, :url => {:action => 'create'} do |f| %>
         <p>ユーザー名</p>
-        <input type="text" name="name" value="<%= @user.name %>">
+        <%= f.text_field :name %>
+        <%= f.file_field :image %>
+        <p>自己紹介</p>
+        <%= f.text_field :content %>
+
         <p>メールアドレス</p>
-        <input type="text" name="email" value="<%= @user.email %>">
+        <%= f.text_field :email %>
+
         <p>パスワード</p>
-        <input type="password" name="password" value="<%= @user.password %>">
+        <%= f.password_field :password %>
         <input type="submit" value="新規登録">
       <% end %>
     </div>
