Updated sidenav for true links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,14 +27,15 @@
       <div class="nav-wrapper" style="background:#294C7A;">
         <%= link_to "Histgram", "/", {:class => "brand-logo white-text"} %>
         <ul id="nav-mobile" class="right hide-on-med-and-down white-text">
-          <!-- <li><a href="#"><i class="material-icons left">search</i></a></li> -->
           <li>
-            <a href="#"><i class="material-icons left">info</i></a>
+            <%= link_to("/about") do %>
+              <i class="material-icons left">info</i>
+            <% end %>
           </li>
         </ul>
-        <a href="#" data-target="slide-out" class="">
+        <%= link_to("/users/#{@current_user.id}") do %>
           <i class="material-icons right" style="margin-right:28px;">account_circle</i>
-        <a>
+        <% end %>
         <a href="#" data-target="slide-out" class="sidenav-trigger white-text">
           <i class="material-icons">menu</i>
         </a>
@@ -75,7 +76,11 @@
 
       <!-- ログイン可否 -->
       <% if @current_user %>
-        <li><a href="#"><i class="material-icons left">account_circle</i><%= @current_user.name %></a></li>
+        <li>
+          <%= link_to("/users/#{@current_user.id}") do %>
+            <i class="material-icons left">account_circle</i><%= @current_user.name %>
+          <% end %>
+        </li>
         <li>
           <%= link_to logout_path, :method => :post do %>
             <i class="material-icons left">exit_to_app</i>ログアウト
@@ -104,7 +109,7 @@
 
     <div class="fixed-action-btn">
       <%= link_to posts_new_path, class: "btn-floating btn-large red" do %>
-        <i class="large material-icons">add</i>
+        <i class="material-icons" style="font-size:2.6rem;">add</i>
       <% end %>
     </div>
 
